# template-app

./: Cargo.toml  build.rs  package-lock.json  tailwind.config.js  tauri.conf.json
src/: main.rs
src-web/: connecting_template.html  index.html
src-web/script/: home.js  init_const.js  listen.js  tab.js
src/command/: mod.rs  view.rs
src/data/: common.rs  db.rs  hierarchy.rs  mod.rs
