[package]
name = "template-app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
chrono = { version = "0.4.26", features = [] }
anyhow = { version = "1.0.64"}

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "shell-open", "clipboard-write-text"] }
custom-utils = "0.10.13"
log = "0.4.17"
anyhow = { version = "1.0.64"}
sled = "0.34.7"
serde = {version ="1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
serde_repr = "0.1.18"

tokio = {version ="1.21.0", features = ["macros", "rt-multi-thread"] }
config = {version="0.13.2", features = ["toml", "json"] }
toml_edit = "0.14.4"
thiserror = "1.0.37"
bytes = "1.4.0"
directories = "5.0.0"


[features]
default = ["custom-utils/prod"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
#
#[patch.crates-io]
#for-mqtt-client = { path = "../for-mqtt-client"}


